refactor: copy of website, but jekyll way

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -503,7 +503,7 @@
             <p>Le site est hébergé par : Netlify</p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Fermer</button>
+            <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Fermer</button>
           </div>
         </div>
       </div>
