chore: update informations

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,7 +106,7 @@
             <div class="intro-bg">
               <h1 class="section-heading">Un nouvel esprit de collaboration</h1>
               <p>
-                DEV Machine est une agence de services numériques : des petites
+                DEV Machine est une Software Factory : des petites
                 équipes de qualité engagées de façon pragmatique dans la mise en
                 oeuvre des projets IT de ses clients.
               </p>
@@ -140,7 +140,7 @@
                   - Applications métier : SI, Web, mobile, …
                 </p>
                 <p class="text-muted">- Développements spécifiques</p>
-                <p class="text-muted">- POC / Prototypes</p>
+                <p class="text-muted">- MVP / PoC</p>
               </div>
             </div>
           </div>
@@ -155,9 +155,8 @@
               </div>
               <div class="col-md-7">
                 <h4 class="competences-heading">Conseil</h4>
-                <p class="text-muted">- Expertise technique</p>
-                <p class="text-muted">- Audit</p>
-                <p class="text-muted">- Coaching</p>
+                <p class="text-muted">- Expertise technique et audit technique</p>
+                <p class="text-muted">- Aide à la définition de Produits</p>
                 <p class="text-muted">- Accompagnement méthodologique</p>
               </div>
             </div>
@@ -411,7 +410,7 @@
             <div class="row text-align-horizontal">
               <div class="col-12 annonces">
                 Nous recherchons en continu sur Rennes des DevOps, des
-                développeurs front JS, des développeurs back JavaEE ou JS, et
+                développeurs front JS, des développeurs back Java ou JS, et
                 des développeurs full-stack pour enrichir l'équipe et participer
                 à cette belle aventure.
               </div>
@@ -493,8 +492,8 @@
             <p>RCS Rennes : 844 646 463</p>
             <p>Code APE : Conseil en systèmes et logiciels informatiques (6202A)</p>
             <p>N° TVA : FR59844646463</p>
-            <p>Siège Social : 64 rue de l'écu, 35140 Saint-Aubin du Cormier, France</p>
-            <p>Téléphone : 0674013945
+            <p>Siège Social : 9 rue du vieux chêne, 35510 Cesson-Sévigné, France</p>
+            <p>Téléphone : 02 23 45 15 11
             <p>Mail : contact@devmachine.fr</p>
             <p>Gérant : Vincent Lescalier</p>
             <p>Le site www.devmachine.fr a été créé par DevMachine, qui en est également le webmaster.</p>
