--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -144,18 +144,15 @@
               </div>
             </div>
           </div>
-          <!-- + Non affiché sur mobile -->
-          <div class="col-md-1 d-none d-sm-block plus">
-            <i class="fas fa-plus fa-stack-41x "></i>
-          </div>
-          <div class="col-md-5">
+
+          <div class="col-md-6">
             <div class="row">
               <div class="col-md-4 icon-activite">
                 <img src="/assets/images/conseil.png" />
               </div>
               <div class="col-md-7">
                 <h4 class="competences-heading">Conseil</h4>
-                <p class="text-muted">- Expertise technique et audit technique</p>
+                <p class="text-muted">- Expertise et audit technique</p>
                 <p class="text-muted">- Aide à la définition de Produits</p>
                 <p class="text-muted">- Accompagnement méthodologique</p>
               </div>
