--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>DEV Machine</title>
+    <title>DEVmachine</title>
     <meta charset="utf-8">
-    <meta name="description" content="DEV Machine, agence de services numériques basée à Rennes" />
+    <meta name="description" content="DEVmachine, agence de services numériques basée à Rennes" />
     <meta name="keywords" content="Java, Angular, applications, mobile, web" />
-    <meta name="og:description" content="DEV Machine, agence de services numériques basée à Rennes"/>
+    <meta name="og:description" content="DEVmachine, agence de services numériques basée à Rennes"/>
   
     <meta name="og:image" content="http://www.devmachine.fr/assets/images/devmachine.png"/>
     <meta name="og:locality" content="Rennes"/>
     <meta name="og:region" content="Bretagne"/>
-    <meta name="og:site_name" content="DEV Machine"/>
+    <meta name="og:site_name" content="DEVmachine"/>
     <base href="/">
   
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -106,7 +106,7 @@
             <div class="intro-bg">
               <h1 class="section-heading">Un nouvel esprit de collaboration</h1>
               <p>
-                DEV Machine est une Software Factory : des petites
+                DEVmachine est une Software Factory : des petites
                 équipes de qualité engagées de façon pragmatique dans la mise en
                 oeuvre des projets IT de ses clients.
               </p>
@@ -168,6 +168,9 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2 class="section-heading ">Notre savoir-faire</h2>
+            <h3 class="section-subheading text-muted">
+              Qualité, technicité, efficacité
+            </h3>
             <br />
             <div class="row">
               <div class="col-md-6 col-sm-12">
@@ -239,7 +242,7 @@
           <div class="row col-md-6 text-align-horizontal">
             <div class="col-12">
               <p>
-                DEV Machine se positionne clairement comme partenaire des
+                DEVmachine se positionne clairement comme partenaire des
                 projets IT de ses clients : nous sommes dans une approche de
                 co-construction et de confiance dans laquelle l’engagement
                 réciproque est une des valeurs fondamentales.
@@ -279,9 +282,10 @@
         <div class="row">
           <div class="col-lg-12 text-center ">
             <h2 class="section-heading ">Ce qui nous unit</h2>
+            <h3 class="section-subheading text-muted">La passion</h3>
             <div class="row text-align-horizontal">
               <div class="col-12">
-                L’équipe DEV MACHINE est un collectif de passionnés :
+                L’équipe DEVmachine est un collectif de passionnés :
                 <ul>
                   <li>
                     <b>passionnés par le sens du service,</b> pour avant tout
@@ -373,7 +377,7 @@
             <h3 class="section-subheading text-muted"></h3>
             <div class="row text-align-horizontal">
               <div class="col-12">
-                L’équipe fondatrice de DEV Machine est une équipe expérimentée
+                L’équipe fondatrice de DEVmachine est une équipe expérimentée
                 dont la force est la complémentarité :
                 <ul>
                   <li>
@@ -484,7 +488,7 @@
             <p>L'ensemble de ce site relève des législations françaises et internationales sur le droit d'auteur et la propriété intellectuelle.
               Tous les droits de reproduction sont réservés, y compris pour les documents iconographiques et photographiques.</p>
 
-            <h2>DEV Machine</h2>
+            <h2>DEVmachine</h2>
             <p>SARL au capital de 3000 €</p>
             <p>RCS Rennes : 844 646 463</p>
             <p>Code APE : Conseil en systèmes et logiciels informatiques (6202A)</p>
