--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -138,12 +138,12 @@
         </div>
 
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-6 pr-0">
             <div class="row">
               <div class="col-md-4 icon-activite">
                 <img class="projets" src="/assets/images/projets.png" />
               </div>
-              <div class="col-md-8">
+              <div class="col-md-8 pr-0">
                 <h4 class="competences-heading">Réalisation de projets</h4>
                 <p class="text-muted">
                   - Applications métier : SI, Web, mobile, …
@@ -153,13 +153,16 @@
               </div>
             </div>
           </div>
-
-          <div class="col-md-6">
+          <!-- + Non affiché sur mobile -->
+          <div class="col-md-1 d-none d-sm-block plus">
+            <i class="fas fa-plus fa-stack-41x "></i>
+          </div>
+          <div class="col-md-5 pr-0">
             <div class="row">
               <div class="col-md-4 icon-activite">
                 <img src="/assets/images/conseil.png" />
               </div>
-              <div class="col-md-7">
+              <div class="col-md-8 pr-0">
                 <h4 class="competences-heading">Conseil</h4>
                 <p class="text-muted">- Expertise et audit technique</p>
                 <p class="text-muted">- Aide à la définition de Produits</p>
