--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -13,6 +13,22 @@
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
+@font-face {
+  font-family: Arciform;
+  src: url(/assets/fonts/ArciformFF/Arciform.otf) format("opentype");
+}
+
+@font-face {
+  font-family: Nunito;
+  src: url(/assets/fonts/Nunito/Nunito-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: Poppins;
+  src: url(/assets/fonts/Poppins/Poppins-Regular.ttf) format("truetype");
+}
+
+
 // style go top button
 .go-top-button{
   z-index: 20;
@@ -32,7 +48,6 @@ $gray-700: #495057 !default;
 $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
-
 
 
 /* kalixo*/
