feat(references): refacto

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -64,14 +64,14 @@
                 >Contact</a
               >
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
                 <a
                   class="nav-link"
                   {% if page.url == "/blog.html" %}style="color: #fc766a; font-weight: bold"{% endif %}
                   href="/blog">
                 Blog
                 </a>
-            </li>
+            </li>-->
           </ul>
         </div>
       </div>
