--- a/_includes/references.html
+++ b/_includes/references.html
@@ -1,5 +1,5 @@
 
-<section id="ref">
+<section id="ref"  class="bg-light">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -18,12 +18,14 @@
                                 <div class="ref">
 
                                     <div class="customer">
-                                        <img class="logo" src="/assets/images/dome.svg">
+                                        <img class="logo" src="/assets/images/clients/dome.svg">
                                         <!-- DOME -->
                                     </div>
                                     <div>
                                         <h4>Périmètre applicatif</h4>
-                                        <p>Applications web, mobiles d'aide à la personne</p>
+                                        <ul class="no-bullet">
+                                            <li>Applications Web et mobile d'aide à la personne</li>
+                                        </ul>
                                     </div>
                                     <div>
                                         <h4>Prestations DEVmachine</h4>
@@ -42,7 +44,6 @@
                                             <li>Vision produit, capacité d’arbitrage sur la valeur produit et le coût de développement
                                             </li>
                                             <li>Amélioration UX/UI</li>
-
                                         </ul>
                                     </div>
                                 </div>
@@ -53,12 +54,14 @@
                             <div class="d-block w-100">
                                 <div class="ref">
                                     <div class="customer">
-                                        <img class="logo" src="/assets/images/cooperl.png">
+                                        <img class="logo" src="/assets/images/clients/cooperl.png">
                                         <!-- COOPERL -->
                                     </div>
                                     <div>
                                         <h4>Périmètre applicatif</h4>
-                                        <p>Suite applicative de gestion de l'élevage</p>
+                                        <ul class="no-bullet">
+                                            <li>Suite applicative de gestion d'élevages</li>
+                                        </ul>
                                     </div>
                                     <div>
                                         <h4>Prestations DEVmachine</h4>
@@ -87,12 +90,14 @@
                             <div class="d-block w-100">
                                 <div class="ref">
                                     <div class="customer">
-                                        <img class="logo" src="/assets/images/sharly-logo.png">
+                                        <img class="logo" src="/assets/images/clients/sharly-logo.png">
                                         <!-- SHARLY -->
                                     </div>
                                     <div>
                                         <h4>Périmètre applicatif</h4>
-                                        <p>Application web, mobiles pour les magasins de la GMS</p>
+                                        <ul class="no-bullet">
+                                            <li>Applications Web et mobiles pour les GMS</li>
+                                        </ul>
                                     </div>
                                     <div>
                                         <h4>Prestations DEVmachine</h4>
@@ -122,12 +127,14 @@
                             <div class="d-block w-100">
                                 <div class="ref">
                                     <div class="customer">
-                                        <img class="logo" src="/assets/images/Biocoop.png">
+                                        <img class="logo" src="/assets/images/clients/Biocoop.png">
                                         <!-- Biocoop -->
                                     </div>
                                     <div>
                                         <h4>Périmètre applicatif</h4>
-                                        <p>Application Web de gestion de badges</p>
+                                        <ul class="no-bullet">
+                                            <li>Application Web de gestion de badges</li>
+                                        </ul>
                                     </div>
                                     <div>
                                         <h4>Prestations DEVmachine</h4>
@@ -155,12 +162,14 @@
                                 <div class="ref">
                                     <div class="customer">
                                         <img class="logo"
-                                             src="/assets/images/MGDIS.png">
+                                             src="/assets/images/clients/MGDIS.png">
                                         <!-- MGDIS -->
                                     </div>
                                     <div>
                                         <h4>Périmètre applicatif</h4>
-                                        <p>Portail Web de gestion des aides financières des collectivités</p>
+                                        <ul class="no-bullet">
+                                            <li>Portails Web de gestion des aides financières des collectivités</li>
+                                        </ul>
                                     </div>
                                     <div>
                                         <h4>Prestations DEVmachine</h4>
