--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,8 @@ layout: default
 ---
 <div class="container">
     <article>
-        <h1>{{page.postTitle}}</h1>
+        <h1>{{page.title}}</h1>
+        <div class="post-info">par {{ page.author }} le {{ page.date | date: "%d/%m/%Y" }}</div>
         {{ content }}
     </article>
 </div>
