--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -489,12 +489,13 @@ footer {
         text-decoration: none;
       }
 
-      p.post-excerpt {
-        font-family: "Roboto", serif;
+      p {
+        font-family: Poppins, serif;
+        text-align: justify;
       }
 
       .post-title {
-        font-family: "Poppins", serif;
+        font-family: "Nunito", serif;
         font-weight: 600;
         font-size: x-large;
       }
@@ -513,6 +514,15 @@ footer {
 article {
   min-height: calc(100vh - 75px);
   padding: 75px 20px 60px;
+  font-family: Poppins, serif;
+  list-style: url(/assets/images/right-chevron-.svg);
+
+  .post-info {
+    font-style: italic;
+    font-size: 0.8rem;
+    color: $gray-500;
+    margin-bottom: 1rem;
+  }
 
   p {
     text-align: justify;
@@ -544,6 +554,14 @@ article {
     margin-left: auto;
     margin-right: auto;
   }
+
+  blockquote {
+    border-left: 3px $gray-200 solid;
+    padding-left: 5px;
+    font-style: italic;
+    color: $gray-500;
+  }
+
 }
 
 @media (min-width: 992px) {
