feat(analytics): anonymize ip

--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -6,6 +6,6 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-132766057-1');
+    gtag('config', 'UA-132766057-1', { 'anonymize_ip': true });
 </script>
 {% endif %}
