--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,32 +1,18 @@
 <footer>
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4  my-auto">
                 <img alt="logo" src="/assets/images/DM-white.svg" width="200"/>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 my-auto">
                 <a data-toggle="modal" data-target="#mentions">Mentions légales</a>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 my-auto">
                 <a href="https://fr.linkedin.com/company/devmachine" target="_blank">
-                    <svg aria-hidden="true" class="global-nav__logo" xmlns="http://www.w3.org/2000/svg" width="34"
-                         height="34" data-supported-dps="34x34" focusable="false">
-                        <g transform="scale(.7083)" fill="none" fill-rule="evenodd">
-                            <rect class="bug-text-color" fill="#FFF" x="1" y="1" width="46" height="46"
-                                  rx="4"></rect>
-                            <path d="M0 4.01A4.01 4.01 0 014.01 0h39.98A4.01 4.01 0 0148 4.01v39.98A4.01 4.01 0 0143.99 48H4.01A4.01 4.01 0 010 43.99V4.01zM19 18.3h6.5v3.266C26.437 19.688 28.838 18 32.445 18 39.359 18 41 21.738 41 28.597V41.3h-7V30.159c0-3.906-.937-6.109-3.32-6.109-3.305 0-4.68 2.375-4.68 6.109V41.3h-7v-23zM7 41h7V18H7v23zm8-30.5a4.5 4.5 0 11-9 0 4.5 4.5 0 019 0z"
-                                  class="background" fill="#0077B5"></path>
-                        </g>
-                    </svg>
+                    <img src="/assets/images/logos/linkedin.png" alt="LinkedIn" height="30">
                 </a>
                 <a href="https://twitter.com/devmachine_fr" target="_blank" class="ml-3">
-                    <svg height="40px" viewBox="0 0 24 24"
-                         class="r-13gxpu9 r-4qtqp9 r-yyyyoo r-16y2uox r-1q142lx r-8kz0gk r-dnmrzs r-bnwqim r-1plcrui r-lrvibr r-1srniue">
-                        <g>
-                            <path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z"
-                                  fill="#1DA1F2"></path>
-                        </g>
-                    </svg>
+                    <img src="/assets/images/logos/Twitter_Logo_WhiteOnImage.png" alt="Twitter" height="28">
                 </a>
             </div>
         </div>
