chore: align social icons

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
                     <img src="/assets/images/logos/linkedin.png" alt="LinkedIn" height="30">
                 </a>
                 <a href="https://twitter.com/devmachine_fr" target="_blank" class="ml-3">
-                    <img src="/assets/images/logos/Twitter_Logo_WhiteOnImage.png" alt="Twitter" height="28">
+                    <img src="/assets/images/logos/Twitter_Logo_WhiteOnImage.png" alt="Twitter" height="30" class="pt-1">
                 </a>
             </div>
         </div>
