--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -32,35 +32,35 @@
             <li class="nav-item">
               <a
                 class="nav-link js-scroll-trigger"
-                href="#competences"
+                href="/#competences"
                 >Offre</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link js-scroll-trigger"
-                href="#demarche"
+                href="/#demarche"
                 >Démarche</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link js-scroll-trigger"
-                href="#nous"
+                href="/#nous"
                 >Nous</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link js-scroll-trigger"
-                href="#ref"
+                href="/#ref"
                 >Références</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link js-scroll-trigger"
-                href="#joinus"
+                href="/#joinus"
                 >Contact</a
               >
             </li>
