correctif retour branche

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -56,7 +56,7 @@ $secondary: #243252 !default;
 $third: #243252 !default;
 
 /* code block variables */
-$code-background: #333333;
+$code-background: #dddddd;
 $code-border-radius: 0.8rem;
-$code-color: #dddddd;
+$code-color: black;
 $code-padding: 1rem;
