--- a/_includes/code-header.html
+++ b/_includes/code-header.html
@@ -1,3 +1,3 @@
 <div class="code-header">
-    <button class="copy-code-button" aria-label="Coper le code dans le presse-papier"></button>
+    <button class="copy-code-button" aria-label="Copier le code dans le presse-papier"></button>
 </div>
