Changement de l'adresse du siège social

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,7 +37,7 @@
                 <p>RCS Rennes : 844 646 463</p>
                 <p>Code APE : Conseil en systèmes et logiciels informatiques (6202A)</p>
                 <p>N° TVA : FR59844646463</p>
-                <p>Siège Social : 9 rue du vieux chêne, 35510 Cesson-Sévigné, France</p>
+                <p>Siège Social : 4 Av. des Peupliers Bâtiment F - 1er étage, 35510 Cesson-Sévigné, France</p>
                 <p>Téléphone : 02 23 45 15 11
                 <p>Mail : contact@devmachine.fr</p>
                 <p>Gérant : Vincent Lescalier</p>
