feat: start new design

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -53,7 +53,10 @@ $black: #000 !default;
 /* kalixo*/
 $primary: #fc766a !default; //D26D64
 $secondary: #243252 !default;
-$third: #243252 !default;
+$third: #69779B !default;
+
+$light-blue: #98B7C4 !default;
+$light-grey: #C0C6D5 !default;
 
 /* code block variables */
 $code-background: #dddddd;
