--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,14 +2,14 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4  my-auto">
-                <img alt="logo" src="/assets/images/DM-white.svg" width="200"/>
+                <img alt="logo" src="/assets/images/website/DM-white.svg" width="200"/>
             </div>
             <div class="col-md-4 my-auto">
                 <a data-toggle="modal" data-target="#mentions">Mentions légales</a>
             </div>
             <div class="col-md-4 my-auto">
                 <a href="https://fr.linkedin.com/company/devmachine" target="_blank">
-                    <img src="/assets/images/logos/linkedin.png" alt="LinkedIn" height="30">
+                    <img src="/assets/images/logos/website/linkedin.png" alt="LinkedIn" height="30">
                 </a>
                 <a href="https://twitter.com/devmachine_fr" target="_blank" class="ml-3">
                     <img src="/assets/images/logos/Twitter_Logo_WhiteOnImage.png" alt="Twitter" height="30" class="pt-1">
