--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <nav
-      class="navbar navbar-expand-lg navbar-dark fixed-top"
+      class="navbar navbar-expand-lg navbar-dark"
       id="mainNav"
       xmlns="http://www.w3.org/1999/html"
     >
@@ -18,7 +18,7 @@
         </button>
         <a href="/">
           <img
-            src="/assets/images/devmachine.svg"
+            src="/assets/images/website/devmachine.svg"
             class="logo-dm"
             width="200"
             alt="logo devmachine"
@@ -32,29 +32,22 @@
             <li class="nav-item">
               <a
                 class="nav-link js-scroll-trigger"
-                href="/#competences"
+                href="/#offre"
                 >Offre</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link js-scroll-trigger"
-                href="/#demarche"
-                >Démarche</a
+                href="/#savoir-faire"
+                >Savoir-faire</a
               >
             </li>
             <li class="nav-item">
               <a
                 class="nav-link js-scroll-trigger"
-                href="/#nous"
-                >Nous</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link js-scroll-trigger"
-                href="/#ref"
-                >Références</a
+                href="/#dm"
+                >DEVmachine</a
               >
             </li>
             <li class="nav-item">
@@ -71,6 +64,13 @@
                   href="/blog">
                 Blog
                 </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link js-scroll-trigger"
+                href="/#recrutement"
+                >Recrutement</a
+              >
             </li>
           </ul>
         </div>
