feat: continue index + footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,26 @@
 <footer>
-    <div class="container">
+    <div class="container pt-5 pb-5">
         <div class="row">
-            <div class="col-md-4  my-auto">
-                <img alt="logo" src="/assets/images/website/DM-white.svg" width="200"/>
-            </div>
-            <div class="col-md-4 my-auto">
-                <a data-toggle="modal" data-target="#mentions">Mentions légales</a>
-            </div>
-            <div class="col-md-4 my-auto">
-                <a href="https://fr.linkedin.com/company/devmachine" target="_blank">
-                    <img src="/assets/images/logos/website/linkedin.png" alt="LinkedIn" height="30">
-                </a>
+            <img alt="logo" src="/assets/images/website/DM-white.svg" width="200"/>
+        </div>
+        <div class="row mt-5 mb-5 d-flex justify-content-around links-container">
+            <a href="/">Accueil</a>
+            <a href="/">Offre</a>
+            <a href="/">Savoir-faire</a>
+            <a href="/">DEVmachine</a>
+            <a href="/">Contact</a>
+            <a href="/">Blog</a>
+            <a href="/">Recrutement</a>
+        </div>
+        <div class="row d-flex justify-content-around bottom-container">
+            <a id="mentions-btn" data-toggle="modal" data-target="#mentions">Mentions légales</a>
+            <a href="mailto:contact@devmachine.fr">contact@devmachine.fr</a>
+            <div>
                 <a href="https://twitter.com/devmachine_fr" target="_blank" class="ml-3">
-                    <img src="/assets/images/logos/Twitter_Logo_WhiteOnImage.png" alt="Twitter" height="30" class="pt-1">
+                    <img src="/assets/images/logos/twitter.png" alt="Twitter" height="18" class="mr-3">
+                </a>
+                <a href="https://fr.linkedin.com/company/devmachine" target="_blank">
+                    <img src="/assets/images/logos/linkedin.png" alt="LinkedIn" height="18">
                 </a>
             </div>
         </div>
