--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -57,6 +57,7 @@ $third: #69779B !default;
 
 $light-blue: #98B7C4 !default;
 $light-grey: #C0C6D5 !default;
+$light-pink: rgba(252, 118, 106, 0.1);
 
 /* code block variables */
 $code-background: #dddddd;
