feat: fix + dm page continue

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -29,31 +29,33 @@
           id="navbarResponsive"
         >
           <ul class="navbar-nav text-uppercase ml-auto">
+            <!-- {% for page in site.pages %}
+            {% endfor %} -->
             <li class="nav-item">
               <a
-                class="nav-link js-scroll-trigger"
-                href="/#offre"
+                class="nav-link"
+                href="/offre"
                 >Offre</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link js-scroll-trigger"
-                href="/#savoir-faire"
+                class="nav-link"
+                href="/savoir-faire"
                 >Savoir-faire</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link js-scroll-trigger"
-                href="/#dm"
+                class="nav-link"
+                href="/dev-machine"
                 >DEVmachine</a
               >
             </li>
             <li class="nav-item">
               <a
-                class="nav-link js-scroll-trigger"
-                href="/#joinus"
+                class="nav-link"
+                href="/joinus"
                 >Contact</a
               >
             </li>
@@ -67,8 +69,8 @@
             </li>
             <li class="nav-item">
               <a
-                class="nav-link js-scroll-trigger"
-                href="/#recrutement"
+                class="nav-link"
+                href="/recrutement"
                 >Recrutement</a
               >
             </li>
