--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -56,6 +56,7 @@ $secondary: #243252 !default;
 $third: #69779B !default;
 
 $light-blue: #98B7C4 !default;
+$lighter-blue: #F4F6FA !default;
 $light-grey: #C0C6D5 !default;
 $light-pink: rgba(252, 118, 106, 0.1);
 
@@ -64,3 +65,7 @@ $code-background: #dddddd;
 $code-border-radius: 0.8rem;
 $code-color: black;
 $code-padding: 1rem;
+
+// SIZE
+$md-size: 991px;
+$sm-size: 767px;
