--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -55,7 +55,7 @@
             <li class="nav-item">
               <a
                 class="nav-link"
-                href="/joinus"
+                href="/contact"
                 >Contact</a
               >
             </li>
