--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -58,7 +58,10 @@ $third: #69779B !default;
 $light-blue: #98B7C4 !default;
 $lighter-blue: #F4F6FA !default;
 $light-grey: #C0C6D5 !default;
+
+// BG
 $light-pink: rgba(252, 118, 106, 0.1);
+$light-purple: rgba(106, 121, 252, 0.1);
 
 /* code block variables */
 $code-background: #dddddd;
