fix: change ul icon list

--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -93,6 +93,7 @@ $SHAPE: polygon(0 .5rem,
 // PHOTOS
 section#index-images {
   position: relative;
+  padding: 0;
 
   div.shape-container {
     height: $HEIGHT;
