--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,17 @@
 ---
 layout: default
 ---
-<div class="container">
-    <article>
-        <h1>{{page.title}}</h1>
-        <div class="post-info">par {{ page.author }} le {{ page.date | date: "%d/%m/%Y" }}</div>
-        {{ content }}
-    </article>
-</div>
+<section id="post-header">
+  <div class="container text-center">
+    <h1 class="section-heading">{{ page.title}}</h1>
+    <p class="text-orange">par {{ page.author }} le {{ page.date | date: "%d/%m/%Y" }}</p>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <article class="post-content">{{ content }}</article>
+  </div>
+</section>
+
 <script src="/assets/scripts/copy-code.js"></script>
