--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -29,51 +29,18 @@
           id="navbarResponsive"
         >
           <ul class="navbar-nav text-uppercase ml-auto">
-            <!-- {% for page in site.pages %}
-            {% endfor %} -->
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/offre"
-                >Offre</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/savoir-faire"
-                >Savoir-faire</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/dev-machine"
-                >DEVmachine</a
-              >
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/contact"
-                >Contact</a
-              >
-            </li>
-            <li class="nav-item">
-                <a
-                  class="nav-link"
-                  {% if page.url == "/blog.html" %}style="color: #fc766a; font-weight: bold"{% endif %}
-                  href="/blog">
-                Blog
-                </a>
-            </li>
-            <li class="nav-item">
-              <a
-                class="nav-link"
-                href="/recrutement"
-                >Recrutement</a
-              >
-            </li>
+            {% assign sorted_pages = site.pages | sort:"order" %}
+            {% for navPage in sorted_pages %}
+             {% unless navPage.exclude-nav %}
+                <li class="nav-item">
+                  <a
+                    class="nav-link"
+                    {% if page.url == navPage.permalink %} style="color: #fc766a; font-weight: bold" {% endif %}
+                    href="{{ navPage.url }}"
+                  >{{ navPage.title }}</a>
+                </li>
+              {% endunless %}
+            {% endfor %}
           </ul>
         </div>
       </div>
