feat: main bg + Julien photo

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
 
     {% include analytics.html %}
   </head>
-  <body>
+  <body
+    {% if page.url == "/" %} class="main-bg" {% endif %}
+  >
     {% include navigation.html %}
 
     {{ content }}
